--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         <span class="cart__title">Meu carrinho</span>
       </div>
     </header>
+    <div class="loading"></div>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
-        <ol class="cart__items"></ol>
+        <ol class="cart__items">
+        </ol>
         <span class="total-price"></span>
         <button class="empty-cart">Esvaziar carrinho</button>
       </section>
